--- a/shard.yml
+++ b/shard.yml
@@ -9,5 +9,7 @@ crystal: 0.30.1
 dependencies:
   cadmium_tokenizer:
     github: cadmiumcr/cadmium_tokenizer
+  cadmium_stemmer:
+    github: cadmiumcr/cadmium_stemmer
 
 license: MIT
