--- a/shard.yml
+++ b/shard.yml
@@ -8,8 +8,8 @@ crystal: 0.30.1
 
 dependencies:
   cadmium_tokenizer:
-    github: cadmiumcr/cadmium_tokenizer
+    github: cadmiumcr/tokenizer
   cadmium_stemmer:
-    github: cadmiumcr/cadmium_stemmer
+    github: cadmiumcr/stemmer
 
 license: MIT
