--- a/shard.yml
+++ b/shard.yml
@@ -7,6 +7,8 @@ authors:
 crystal: 0.30.1
 
 dependencies:
+  cadmium_util:
+    github: cadmiumcr/utilities
   cadmium_tokenizer:
     github: cadmiumcr/tokenizer
   cadmium_stemmer:
