WIP - matrices are fun ! Viva apatite !

--- a/shard.yml
+++ b/shard.yml
@@ -13,5 +13,7 @@ dependencies:
     github: cadmiumcr/tokenizer
   cadmium_stemmer:
     github: cadmiumcr/stemmer
+  apatite:
+    github: watzon/apatite
 
 license: MIT
