--- a/shard.yml
+++ b/shard.yml
@@ -4,13 +4,11 @@ version: 0.1.0
 authors:
   - Rémy Marronnier <rmarronnier@gmail.com>
 
-crystal: 0.30.1
+crystal: 0.31.1
 
 dependencies:
-  cadmium_util:
-    github: cadmiumcr/utilities
-  cadmium_tokenizer:
-    github: cadmiumcr/tokenizer
+  cadmium_lemmatizer:
+    github: cadmiumcr/lemmatizer
   cadmium_stemmer:
     github: cadmiumcr/stemmer
   apatite:
